Default to optimized launch of the JVM when using spring-boot:run
See gh-16941